Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -11,7 +11,7 @@
     Welcome <%=Helpers.current_user(session).username%>
   </h1>
   <h3>
-    <%=Helpers.current_user(session).balance%>
+    Your Balance: <%=Helpers.current_user(session).balance%>
   </h3>
     <a href='/logout'>Log Out</a>
 
