--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -8,8 +8,7 @@
   <body id="page-top">
 
     <%if Helpers.is_logged_in?(session) == true%>
-  <h1>  Welcome <%=Helpers.current_user(session).username%>
-  </h1>
+  <h1>Welcome <%=Helpers.current_user(session).username%></h1>
   <h3>
     Your Balance: <%=Helpers.current_user(session).balance%>
   </h3>
